fixed overflowing div in intro and adde nowrap to swipe for more

--- a/src/styles/scss/partials/_sections.scss
+++ b/src/styles/scss/partials/_sections.scss
@@ -215,6 +215,7 @@ section > div {
     transform: translateX(-50%);
     overflow-x: hidden;
     display: flex;
+    white-space: nowrap;
     p {
         animation: scroll 5s infinite linear;
     }
